# cloudflare-ddns-updater

./: Cargo.toml  Containerfile  README.md  flake.nix
.github/workflows/: ci.yml
src/: cloudflare.rs  main.rs  matrix.rs
