[package]
name = "cloudflare-ddns-updater"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
cloudflare = "0.10"
env_logger = "0.10"
log = "0.4"
public-ip = { version = "0.2", default-features = false, features = ["tokio-http-resolver", "whatismyipaddress-com", "ipify-org"] }
serde = "1.0"
tokio = { version = "1.16" , features = ["full"] }
toml = "0.5"
