[package]
name = "cloudflare-ddns-updater"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
cloudflare = { version = "0.11", default-features = false, features = ["rustls-tls"] }
env_logger = "0.11"
log = "0.4"
public-ip = { version = "0.2", default-features = false, features = ["tokio-http-resolver", "whatismyipaddress-com", "ipify-org"] }
serde = "1.0"
tokio = { version = "1.37" , features = ["full"] }
toml = "0.8"
